c4prj3_finish/grade.txt
Grading at Wed Sep 30 21:21:46 UTC 2020
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o eval.o eval.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o future.o future.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o input.o input.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o main.o main.c
main.c: In function ‘main’:
main.c:48:31: error: ‘input’ undeclared (first use in this function)
  decide=compare_hands(highest,input[j]);
                               ^
main.c:48:31: note: each undeclared identifier is reported only once for each function it appears in
main.c:60:15: error: ‘c’ undeclared (first use in this function)
     win_array[c]++;
               ^
<builtin>: recipe for target 'main.o' failed
make: *** [main.o] Error 1
make failed

Overall Grade: F
